# IDE_Test

google_antigravity/case-flow/: .dockerignore  .env.example  .gitignore  GMAIL_SETUP.md  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  main.py  pyproject.toml  run-backend.sh
google_antigravity/case-flow/backend/: db.sqlite3
google_antigravity/case-flow/backend/api/: admin.py  auth_views.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
google_antigravity/case-flow/backend/api/migrations/: 0001_initial.py  0002_case_action_steps_case_resolution.py  0003_case_gmail_thread_id_case_source_case_updated_at_and_more.py  0004_appsetting.py  0005_case_analyzed_by.py  0006_case_device_model_case_device_serial_and_more.py  0007_userprofile.py  0008_signuprequest.py  0009_case_related_cases.py  0010_usageevent.py  0011_alter_usageevent_event_knowledgeitem.py  0012_referencedocument_referencechunk.py  0013_knowledgeitem_references.py  0014_referencedocument_doc_type.py  0015_chatsession_chatturn.py  0016_knowledgeitem_chat_session_alter_usageevent_event.py  0017_case_knowledge_checked_at.py
google_antigravity/case-flow/backend/api/services/: analyzer.py  email_parser.py  gmail_client.py  (+5 more)
google_antigravity/case-flow/backend/config/: settings.py
google_antigravity/case-flow/docs/: EMBEDDING.md  OPERATIONS.md
google_antigravity/case-flow/frontend/: .gitignore  next.config.ts  package-lock.json  package.json
google_antigravity/case-flow/frontend/src/: proxy.ts
google_antigravity/case-flow/scripts/: pull-vm-data.sh
(+24 files in other folders)
