[project]
name = "case-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.2.2",
    "openai>=2.44.0",
    "google-genai>=2.10.0",
    "psycopg[binary]>=3.2",
    "gunicorn>=26.0.0",
    "whitenoise>=6.12.0",
]
